@@ -29,6 +29,20 @@ name|cayenne
 operator|.
 name|map
 operator|.
+name|DbEntity
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|map
+operator|.
 name|DbRelationship
 import|;
 end_import
@@ -438,6 +452,10 @@ specifier|private
 name|CopyAttributeRelationshipAction
 name|copy
 decl_stmt|;
+specifier|private
+name|JToolBar
+name|toolBar
+decl_stmt|;
 specifier|public
 name|DbEntityAttributeRelationshipTab
 parameter_list|(
@@ -456,6 +474,13 @@ argument_list|()
 expr_stmt|;
 name|initToolBar
 argument_list|()
+expr_stmt|;
+name|mediator
+operator|.
+name|addDbEntityDisplayListener
+argument_list|(
+name|this
+argument_list|)
 expr_stmt|;
 block|}
 specifier|private
@@ -584,13 +609,12 @@ name|void
 name|initToolBar
 parameter_list|()
 block|{
-name|JToolBar
 name|toolBar
-init|=
+operator|=
 operator|new
 name|JToolBar
 argument_list|()
-decl_stmt|;
+expr_stmt|;
 name|ActionManager
 name|actionManager
 init|=
@@ -971,20 +995,85 @@ name|EntityDisplayEvent
 name|e
 parameter_list|)
 block|{
-name|attributePanel
-operator|.
-name|currentDbEntityChanged
-argument_list|(
+name|DbEntity
+name|entity
+init|=
+operator|(
+name|DbEntity
+operator|)
 name|e
+operator|.
+name|getEntity
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|entity
+operator|.
+name|getDataMap
+argument_list|()
+operator|.
+name|getMappedEntities
+argument_list|(
+name|entity
+argument_list|)
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+name|toolBar
+operator|.
+name|getComponentAtIndex
+argument_list|(
+literal|3
+argument_list|)
+operator|.
+name|setEnabled
+argument_list|(
+literal|false
 argument_list|)
 expr_stmt|;
-name|relationshipPanel
+name|toolBar
 operator|.
-name|currentDbEntityChanged
+name|getComponentAtIndex
 argument_list|(
-name|e
+literal|4
+argument_list|)
+operator|.
+name|setEnabled
+argument_list|(
+literal|false
 argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
+name|toolBar
+operator|.
+name|getComponentAtIndex
+argument_list|(
+literal|3
+argument_list|)
+operator|.
+name|setEnabled
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|toolBar
+operator|.
+name|getComponentAtIndex
+argument_list|(
+literal|4
+argument_list|)
+operator|.
+name|setEnabled
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 end_class
