@@ -576,6 +576,10 @@ specifier|protected
 name|CardLayout
 name|pkGeneratorDetailLayout
 decl_stmt|;
+specifier|private
+name|JToolBar
+name|toolBar
+decl_stmt|;
 specifier|public
 name|DbEntityTab
 parameter_list|(
@@ -604,13 +608,12 @@ name|void
 name|initView
 parameter_list|()
 block|{
-name|JToolBar
 name|toolBar
-init|=
+operator|=
 operator|new
 name|JToolBar
 argument_list|()
-decl_stmt|;
+expr_stmt|;
 name|ActionManager
 name|actionManager
 init|=
@@ -1483,6 +1486,74 @@ argument_list|,
 name|type
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|entity
+operator|.
+name|getDataMap
+argument_list|()
+operator|.
+name|getMappedEntities
+argument_list|(
+name|entity
+argument_list|)
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+name|toolBar
+operator|.
+name|getComponentAtIndex
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|setEnabled
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+name|toolBar
+operator|.
+name|getComponentAtIndex
+argument_list|(
+literal|7
+argument_list|)
+operator|.
+name|setEnabled
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|toolBar
+operator|.
+name|getComponentAtIndex
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|setEnabled
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|toolBar
+operator|.
+name|getComponentAtIndex
+argument_list|(
+literal|7
+argument_list|)
+operator|.
+name|setEnabled
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 name|void
 name|setEntityName
